hphp/test/zend/good/Zend/tests/bug29015.php.expectf

Fatal error: Cannot access empty property in %s/bug29015.php on line 4
